--- a/mandelbulber2/qt/render_window.ui
+++ b/mandelbulber2/qt/render_window.ui
@@ -77,8 +77,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>1238</width>
-            <height>812</height>
+            <width>1193</width>
+            <height>787</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="scrollAreaLayoutRenderedImage">
@@ -327,9 +327,6 @@
     <addaction name="actionLoad_example"/>
     <addaction name="menuRecent_Settings_list"/>
     <addaction name="separator"/>
-    <addaction name="actionSave_as_default_settings"/>
-    <addaction name="actionDelete_default_settings"/>
-    <addaction name="separator"/>
     <addaction name="actionSave_settings"/>
     <addaction name="actionSave_settings_to_clipboard"/>
     <addaction name="separator"/>
@@ -338,6 +335,9 @@
     <addaction name="separator"/>
     <addaction name="actionExportVoxelLayers"/>
     <addaction name="actionExport_Mesh"/>
+    <addaction name="separator"/>
+    <addaction name="actionSave_as_default_settings"/>
+    <addaction name="actionDelete_default_settings"/>
     <addaction name="separator"/>
     <addaction name="actionProgramPreferences"/>
     <addaction name="separator"/>
@@ -464,8 +464,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>68</width>
-          <height>147</height>
+          <width>84</width>
+          <height>132</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_19">
@@ -579,8 +579,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>68</width>
-          <height>147</height>
+          <width>84</width>
+          <height>132</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_26">
@@ -646,8 +646,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>68</width>
-          <height>147</height>
+          <width>84</width>
+          <height>132</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_59">
@@ -713,8 +713,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>68</width>
-          <height>147</height>
+          <width>84</width>
+          <height>132</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_46">
@@ -882,8 +882,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>357</width>
-          <height>68</height>
+          <width>316</width>
+          <height>84</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_93">
@@ -949,8 +949,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>82</width>
-          <height>316</height>
+          <width>92</width>
+          <height>313</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -1010,8 +1010,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>68</width>
-          <height>147</height>
+          <width>84</width>
+          <height>132</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_materials">
@@ -1089,8 +1089,8 @@
          <rect>
           <x>0</x>
           <y>0</y>
-          <width>68</width>
-          <height>353</height>
+          <width>84</width>
+          <height>329</height>
          </rect>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_94">
@@ -1597,7 +1597,7 @@
   </action>
   <action name="actionSave_as_default_settings">
    <property name="text">
-    <string>Save as default settings New</string>
+    <string>Save as default settings</string>
    </property>
   </action>
   <action name="actionReset_to_default">
@@ -1608,10 +1608,13 @@
    <property name="text">
     <string>New</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+N</string>
+   </property>
   </action>
   <action name="actionDelete_default_settings">
    <property name="text">
-    <string>Delete default settings New</string>
+    <string>Delete default settings</string>
    </property>
   </action>
  </widget>
